--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,5 +1,9 @@
 NotEmpty=This field is required.
 Size.userForm.username=Please use between 3 and 32 characters.
+Wrong.email=Incorrect input email.
+Wrong.name=Incorrect input name.
+Wrong.surname=Incorrect input surname.
 Duplicate.userForm.username=Someone already has that username.
 Size.userForm.password=Try one with at least 8 characters.
 Diff.userForm.passwordConfirm=These passwords don't match.
+Size.userForm.email=Please use between 4 and 32 characters. 
