--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -3,6 +3,7 @@ Size.userForm.username=Please use between 3 and 32 characters.
 Wrong.email=Incorrect input email.
 Wrong.name=Incorrect input name.
 Wrong.surname=Incorrect input surname.
+Wrong.patronymic= Incorrect input patronymic.
 Duplicate.userForm.username=Someone already has that username.
 Size.userForm.password=Try one with at least 8 characters.
 Diff.userForm.passwordConfirm=These passwords don't match.
