--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -4,6 +4,7 @@ Wrong.email=Incorrect input email.
 Wrong.name=Incorrect input name.
 Wrong.surname=Incorrect input surname.
 Wrong.patronymic= Incorrect input patronymic.
+Wrong.number= Incorrect input number.
 Duplicate.userForm.username=Someone already has that username.
 Size.userForm.password=Try one with at least 8 characters.
 Diff.userForm.passwordConfirm=These passwords don't match.
